// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonGroup> that renders a button should add classes when props are changed 1`] = `
<div>
  <div
    class="ButtonGroup ButtonGroup--isBlock"
    role="group"
  >
    <button
      class="Button Button--size_large Button--variant_filled Button--context_primary ButtonGroup__button ButtonGroup__button--isBlock ButtonGroup__button--first"
      type="button"
    >
      A button
    </button>
    <button
      class="Button Button--size_large Button--variant_filled Button--context_primary ButtonGroup__button ButtonGroup__button--isBlock ButtonGroup__button--last"
      type="button"
    >
      Another button
    </button>
  </div>
</div>
`;

exports[`<ButtonGroup> that renders a button should pass main props if child is array with size one 1`] = `
<div>
  <div
    class="ButtonGroup ButtonGroup--isBlock"
    role="group"
  >
    <button
      class="Button Button--isBlock Button--size_small Button--variant_filled Button--context_primary"
      type="button"
    >
      A button
    </button>
  </div>
</div>
`;

exports[`<ButtonGroup> that renders a button should pass main props, but not add styles if there is only 1 child 1`] = `
<div>
  <div
    class="ButtonGroup ButtonGroup--isBlock"
    role="group"
  >
    <button
      class="Button Button--isBlock Button--size_small Button--variant_filled Button--context_primary"
      type="button"
    >
      A button
    </button>
  </div>
</div>
`;

exports[`<ButtonGroup> that renders a button should render default button correctly 1`] = `
<div>
  <div
    class="ButtonGroup"
    role="group"
  >
    <button
      class="Button Button--variant_filled Button--context_primary ButtonGroup__button ButtonGroup__button--first"
      type="button"
    >
      A button
    </button>
    <button
      class="Button Button--variant_filled Button--context_primary ButtonGroup__button ButtonGroup__button--last"
      type="button"
    >
      Another button
    </button>
  </div>
</div>
`;

exports[`<ButtonGroup> that renders a button should render with conditional JSX 1`] = `
<div>
  <div
    class="ButtonGroup"
    role="group"
  >
    <button
      class="Button Button--variant_filled Button--context_primary ButtonGroup__button ButtonGroup__button--first"
      type="button"
    >
      A button
    </button>
  </div>
</div>
`;

exports[`<ButtonGroup> that renders a button should support mixed element types 1`] = `
<div>
  <div
    class="ButtonGroup ButtonGroup--isBlock"
    role="group"
  >
    <button
      class="Button Button--size_large Button--variant_filled Button--context_primary ButtonGroup__button ButtonGroup__button--isBlock ButtonGroup__button--first"
      type="button"
    >
      A button
    </button>
    <a
      class="Button Button--size_large Button--variant_filled Button--context_primary ButtonGroup__button ButtonGroup__button--isBlock"
      href="#"
    >
      An anchor
    </a>
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      class="Button Button--variant_filled Button--context_secondary"
      data-state="closed"
      id="radix-:r0:"
      type="button"
    >
      A dropdown button
    </button>
  </div>
</div>
`;
